--- a/style.css
+++ b/style.css
@@ -1,7 +1,20 @@
-body{
+*, *::before, *::after{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.content{
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
 }
+.main{
+    
+    flex-grow: 1;
+}
+   
+
 ul{
     list-style: none;
     margin: 0px;
@@ -16,11 +29,13 @@ ul{
     border:3px solid cornflowerblue;
     border-radius: 10px;
     flex-shrink: 0;
+
     
 }
 
 .section{
     display: flex;
+    padding: 0px 250px;
 }
 
 nav{
@@ -28,17 +43,44 @@ nav{
     width: auto;
     height: 60px;
     justify-content: space-between;
-    align-items: center;
-    
-    
+    align-items: center;    
 }
-.right{
+.right, .left{
     display: flex;
 }
-.left{
-    display: flex;
+
+nav, .section1 {
+    background-color: #1f2937;
+    color: white;
+    padding: 0px 250px;
+    
 }
-.upper{
+
+#footer{
+    text-align: center;
     background-color: #1f2937;
     color: white;
 }
+
+.sign-up{
+    display: flex;
+    height: 30px;
+    width: 100px;
+    border-radius: 10px;
+    background-color: #3882F6;
+    color: white;
+    justify-content: center;
+    align-items: center;
+}
+
+.heroText, .secText{
+    display: flex;
+}
+
+.guitar{
+    display: flex;
+    width: 640px;
+    height: auto;
+}
+
+
