--- a/style.css
+++ b/style.css
@@ -1,86 +1,71 @@
-*, *::before, *::after{
-    margin: 0;
-    padding: 0;
+*{
     box-sizing: border-box;
+    border: 2px solid cornflowerblue;
+}
+
+body{
+    margin:0;
+    padding: 0;
+    height: 100vh;
+    margin-left: 200px;
+    margin-right: 200px;
+    
 }
 
 .content{
+    min-height: 100%;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
-}
-.main{
-    
-    flex-grow: 1;
-}
-   
-
-ul{
-    list-style: none;
-    margin: 0px;
-    padding: 0px;
-    gap: 16px;
+    align-items: stretch;
     
 }
 
-.box{
-    width: 100px;
-    height: 100px;
-    border:3px solid cornflowerblue;
-    border-radius: 10px;
-    flex-shrink: 0;
-
-    
-}
-
-.section{
+.one, .two, .three, .four, .five, .six{
     display: flex;
-    padding: 0px 250px;
+    
+    
 }
 
-nav{
+.logo, .nav-links{
     display: flex;
-    width: auto;
-    height: 60px;
+}
+
+.one{
+    align-items: center;
     justify-content: space-between;
-    align-items: center;    
-}
-.right, .left{
-    display: flex;
 }
 
-nav, .section1 {
-    background-color: #1f2937;
-    color: white;
-    padding: 0px 250px;
-    
+.nav-links{
+    list-style: none;
+    gap: 30px;
 }
 
-#footer{
-    text-align: center;
-    background-color: #1f2937;
-    color: white;
-}
-
-.sign-up{
-    display: flex;
-    height: 30px;
-    width: 100px;
-    border-radius: 10px;
-    background-color: #3882F6;
-    color: white;
+.six{
     justify-content: center;
     align-items: center;
+    
+}
+.article{
+    flex: 1;
+}
+.two-left{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.two{
+    
+    
+}
+.two-right{
+    display: flex;
+    flex: 1;
+    justify-content: center;
+}
+.image{
+    width: 500px;
+    margin:100px;
 }
 
-.heroText, .secText{
-    display: flex;
-}
-
-.guitar{
-    display: flex;
-    width: 640px;
-    height: auto;
-}
 
 
